# nightwatcher-ingest

./: .gitignore  Makefile  README.md  nwingest.example.yaml  nwingest.py  pyproject.toml
.github/workflows/: lint.yml
packaging/: build-deb.sh  conffiles  config  control  copyright  nwingest.env  postinst  postrm  prerm  templates
systemd/: nwingest.service
