# ============================================================================
#  nightwatcher-ingest packaging
#  License: GPL-3.0-or-later
# ============================================================================
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nightwatcher-ingest"
version = "0.1.0"
description = "Config-driven FITS ingest: watch a directory, classify by header, rename to a standard, and file into an archive tree."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "David Gilinsky" }]
keywords = ["astronomy", "astrophotography", "FITS", "PixInsight", "NightWatcher"]
dependencies = [
  "astropy>=5.0",
  "PyYAML>=5.4",
]

[project.optional-dependencies]
# Needed only when sqm.enabled or extension.register is true (nwdb access).
db = ["mysql-connector-python>=8.0"]

[project.scripts]
nwingest = "nwingest:main"

[project.urls]
Homepage = "https://github.com/DavidGilinsky/nightwatcher-ingest"

[tool.setuptools]
py-modules = ["nwingest"]
